3/yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-api-service
spec:
  selector:
    app: rick-morty-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
